--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,7 +1,7 @@
 import Cards from "../components/Cards";
 import TextRotator from "../components/textRotator";
 
-<strong style={{ color: '#72aa24', fontSize: '60px' }}>AlertX DOCUMENTATION</strong>
+<strong style={{ color: '#CE6D13FF', fontSize: '60px' }}>AlertX DOCUMENTATION</strong>
 
 
 <TextRotator />
